# multimodal-agentic-rag

./: .env.example  .gitignore  QUOTA_SOLUTION.md  README.md  SYSTEM_STATUS.md  docker-compose.yml  test_relevancy.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: graph.py  llm_factory.py  prompts.py  state.py
backend/app/agents/nodes/: __init__.py  context_builder.py  evidence_grader.py  finalize.py  generator.py  hallucination_validator.py  intent_router.py  multi_hop.py  query_rewriter.py  query_understanding.py  retrieval_orchestrator.py  summarization.py  tool_executor.py
backend/app/api/: __init__.py  chat.py  documents.py  export.py  images.py  router.py  sessions.py  traces.py
backend/app/models/: __init__.py  db.py
backend/app/schemas/: __init__.py  chat.py  documents.py  sessions.py
backend/app/services/: chunking.py  embedding.py  ingestion.py  parsing.py  retrieval.py
backend/app/utils/: image_utils.py
backend/eval/: eval_dataset.json  eval_runner.py  limited_eval.py  metrics.py  quick_test.py  system_test.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_ingestion.py  test_retrieval.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/public/: download_helper.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppLayout.tsx  ChatMessage.tsx  CitationCard.tsx  ComparisonTable.tsx  ConfidenceBadge.tsx  DocumentList.tsx  (+5 more)
(+9 files in other folders)
